# RewardIO

./: .dockerignore  .env.example  .gitignore  AI_WORKFLOW_RULES.md  Cargo.toml  LICENSE  PROJECT_STRUCTURE.md  README.md  backend.Dockerfile  docker-compose.yml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/migrations/: 20231027120000_create_users_and_roles.up.sql  20260515141300_create_hello_messages.down.sql  20260515141300_create_hello_messages.up.sql
crates/api/src/: app.rs  config.rs  lib.rs  logger.rs  main.rs  state.rs
crates/api/src/auth/: mod.rs  session.rs
crates/api/src/auth/dtos/: requests.rs  responses.rs
crates/api/src/auth/handlers/: mod.rs
crates/api/src/hello/handlers/: mod.rs
crates/api/tests/: api_tests.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs
crates/core/src/domain/: hello.rs  user.rs
crates/core/src/repositories/: hello.rs  user.rs
crates/core/src/services/: auth.rs  hello.rs
crates/core/tests/: auth_tests.rs
crates/infra/: Cargo.toml
crates/infra/src/: errors.rs  hello_repository.rs  lib.rs  message_service.rs  user_repository.rs
crates/infra/tests/: repo_tests.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/home/: Button.tsx  CloudGraphic.tsx  CloudLayer.tsx  GlassPanel.tsx  HomePage.tsx
frontend/src/styles/: homepage.css
frontend/src/theme/: ThemeProvider.tsx  themes.ts
scripts/: coverage.sh  test.sh
scripts/docker/: backend-entrypoint.sh
