[package]
name = "rewardio-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rewardio-core = { path = "../core" }
rewardio-infra = { path = "../infra" }
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
serde_json = "1.0.149"
