[package]
name = "rewardio-api"
version = "0.1.0"
edition = "2024"

[dependencies]
rewardio-core = { path = "../core" }
rewardio-infra = { path = "../infra" }
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
config = "0.15"
dotenvy = "0.15"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
async-trait = "0.1"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
