[package]
name = "rewardio-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.86"
thiserror = "2.0.11"
tracing = "0.1"
bcrypt = "0.15"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync"] }
